--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,11 @@ servers.dat
 # ---- 仅追踪部分 config ----
 config/**
 
-!config/fancymenu/
-!config/ftbquests/
-!config/iceandfire/
-!config/incontrol/
-!config/paxi/
+!config/fancymenu/**
+!config/ftbquests/**
+!config/iceandfire/**
+!config/incontrol/**
+!config/paxi/**
 
 !config/carryon-client.toml
 !config/carryon-common.toml
