--- a/.gitignore
+++ b/.gitignore
@@ -34,15 +34,33 @@ config/**
 !config/iceandfire/**
 !config/incontrol/
 !config/incontrol/**
+!config/l2_configs/
+!config/l2_configs/**
+!config/l2configs/
+!config/l2configs/**
+!config/ModernUI/
+!config/ModernUI/**
 !config/paxi/
 !config/paxi/**
+!config/regions_unexplored/
+!config/regions_unexplored/**
+!config/voicechat/
+!config/voicechat/**
 
 !config/carryon-client.toml
 !config/carryon-common.toml
 !config/cataclysm.toml
+!config/curios-client.toml
+!config/curios-common.toml
+!config/curios-server.toml
+!config/darkdoppelganger-common.toml
+!config/defaultoptions-common.toml
 !config/DistantHorizons.toml
 !config/dragonsurvival-client.toml
 !config/dragonsurvival-server.toml
+!config/eternal_starlight.json
+!config/irons_spellbooks-client.toml
+!config/irons_spellbooks-server.toml
 !config/yes_steve_model-client.toml
 !config/yes_steve_model-common.toml
 !config/yes_steve_model-server.toml
